убрал лишний пассворд энкодер в сервисе. Поправил кодстайл в stream